change target at github

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p> Name : <span >Irfan Chowdhury</span></p>
         <p>Email : <a href="https://www.bing.com/search?q=email+create&cvid=9f782b16784e4f159e0bddcee7c49236&aqs=edge.0.0l9.4943j0j4&FORM=ANAB01&PC=EDGEDSE" target="_blank">irfanchowdhury@gmail.com</a></p>
         <h3>GitHub</h3>
-        <a href="https://github.com/Murad-Takla/basic-info">GitHub Profile</a>
+        <a href="https://github.com/Murad-Takla/basic-info" target="_blank">GitHub Profile</a>
 
         <h3>Hobbies</h3>
         <blockquote>
